<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="16"
            android:inputType="numberDecimal"
            android:hint="@string/edit_text_hint_ip"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorTexto"
            android:text="@string/textview_slashinv"/>

        <EditText
            android:id="@+id/edit_text_mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLength="2"
            android:hint="@string/edit_text_hint_mask"
            android:inputType="numberDecimal"
            android:textAlignment="center"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/TextId"
        android:textColor="@color/colorTexto"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <EditText
        android:id="@+id/edit_text_netid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/text_view_broad"
        android:textColor="@color/colorTexto"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <EditText
        android:id="@+id/edit_text_broad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_canh"
                android:textSize="24sp"
                android:textColor="@color/colorTexto"/>
            <EditText
                android:id="@+id/edit_text_canip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_netp"
                android:textSize="24sp"
                android:textColor="@color/colorTexto"/>
            <EditText
                android:id="@+id/edit_text_netp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_hostp"
            android:textSize="24sp"
            android:textColor="@color/colorTexto"/>
        <EditText
            android:id="@+id/edit_text_hostp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/boton_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botoncalc_text"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            />

        <Button
            android:id="@+id/boton_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonres_text"
            />

    </LinearLayout>



</LinearLayout>